--- a/notebooks/analyze_mel_spec.ipynb
+++ b/notebooks/analyze_mel_spec.ipynb
@@ -11,11 +11,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "data = pd.read_pickle('data/processed/msd_bb_balanced_dev_sample.pickle')\n",
-    "data = data['librosa_melspectrogram']\n",
-    "\n",
-    "all_melspect = np.vstack(data).flatten()\n",
-    "sns.boxplot(x=all_melspect)\n",
+    "data = pd.read_pickle('../data/hit_song_prediction_ismir2020/processed/analytics_tfidf_msd_bb_mbid_cleaned_matches_melspect_unique.pickle.xz')\n",
+    "data = data.sort_values(by=['label'])\n",
+    "display(data)\n",
+    "sns.heatmap(data[range(25)])\n",
     "plt.show()"
    ]
   },
@@ -56,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
