--- a/notebooks/correlation.ipynb
+++ b/notebooks/correlation.ipynb
@@ -7,24 +7,31 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import seaborn as sn\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats\n",
     "\n",
     "import hit_prediction_code.common as common\n",
     "from hit_prediction_code.dataloaders import EssentiaLoader\n",
     "\n",
-    "dataset_name = 'msd_bb_balanced_essentia'\n",
-    "dataloader = EssentiaLoader(\n",
-    "    dataset_path='../data/processed/'+dataset_name+ '.pickle',\n",
-    "    features=[\n",
-    "        ('hl', 'wide'),\n",
-    "        ('year', 'wide'),\n",
-    "    ],\n",
-    "    label='peak',\n",
-    "    nan_value=150,\n",
-    ")\n",
+    "dataset_name = 'msd_bb_mbid_cleaned_matches_ab_unique.parquet'\n",
+    "data = common.read_dataframe('../data/hit_song_prediction_ismir2020/processed/' + dataset_name)\n",
     "\n",
-    "data, labels = dataloader.load()"
+    "targets = ['lastfm_listener_count', 'lastfm_playcount', 'peakPos', 'weeks']\n",
+    "data = data[targets]\n",
+    "\n",
+    "print(data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(data.sort_values(by=['lastfm_listener_count']))\n",
+    "\n",
+    "sn.heatmap(data.corr('spearman'), annot=True, vmin=-1., vmax=1., cmap='coolwarm')"
    ]
   },
   {
@@ -66,7 +73,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
