--- a/notebooks/data_preprocessing.ipynb
+++ b/notebooks/data_preprocessing.ipynb
@@ -245,7 +245,7 @@
     "\n",
     "display(strange_info['weeks'].plot.hist())\n",
     "electronic = list(filter(lambda c: c.startswith('metadata.version'), strange_info.columns))\n",
-    "display(strange_info[['artist_clean', 'title_clean', 'weeks', 'peakPos', 'highlevel.mood_electronic.all.electronic_x'] + electronic])"
+    "display(strange_info[['lastfm_listener_count', 'lastfm_playcount', 'weeks', 'peakPos', 'highlevel.mood_electronic.all.electronic_x'] + electronic])"
    ]
   },
   {
