--- a/notebooks/msd_mbid_lastfm.ipynb
+++ b/notebooks/msd_mbid_lastfm.ipynb
@@ -20,6 +20,54 @@
     "\n",
     "display(msd_mbid_map[['lastfm_listener_count']].plot.hist())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_cleaned_matches.csv')\n",
+    "print(matches.shape)\n",
+    "display(matches.sort_values(by=['msd_id'])[['artist_clean', 'title_clean', 'msd_id', 'echo_nest_id']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_non_matches.csv')\n",
+    "print(matches.shape)\n",
+    "display(matches.sort_values(by=['uuid'])[['uuid', 'artist_clean', 'title_clean', 'msd_id', 'echo_nest_id', 'mbid', 'lastfm_mbid']])\n",
+    "\n",
+    "print(matches.drop_duplicates(['uuid']).shape, matches.columns)\n",
+    "print(matches.drop_duplicates(['uuid', 'artist_clean', 'title_clean', 'msd_id', 'echo_nest_id', 'mbid', 'lastfm_mbid']).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet('../data/hit_song_prediction_ismir2020/processed/msd_bb_mbid_cleaned_matches_essentia_unique.parquet')\n",
+    "\n",
+    "cols = sorted([c for c in df.columns if 'metadata' not in c and 'highlevel' not in c and 'lowlevel' not in c and 'tonal' not in c and 'rhythm' not in c])\n",
+    "\n",
+    "display(df[cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "targets = pd.read_csv('../data/hit_song_prediction_ismir2020/interim/msd_bb_mbid_targets.csv')\n",
+    "display(targets)"
+   ]
   }
  ],
  "metadata": {
