--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -27,10 +27,11 @@
     "best_results = pd.concat(best_results)\n",
     "\n",
     "best_results['mae'] = best_results['neg_mean_absolute_error']\n",
+    "best_results['meae'] = best_results['neg_median_absolute_error']\n",
     "best_results['rmse'] = best_results['neg_mean_squared_error'].pow(1./2)\n",
     "best_results = best_results.sort_values(by=['approach'])\n",
     "\n",
-    "display(best_results[['date', 'approach', 'mae', 'rmse', 'hit_nonhit_accuracy']])\n",
+    "display(best_results[['date', 'approach', 'mae', 'meae', 'rmse', 'hit_nonhit_accuracy']])\n",
     "\n",
     "display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
