--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -15,7 +15,7 @@
     "from dbispipeline.analytics import get_results_as_dataframe\n",
     "\n",
     "results = get_results_as_dataframe(project_name='hit-prediction-ismir2020', table_name='hit_prediction')\n",
-    "results = results[(results['date'] > '2020-08-06') & (results['date'] < '2020-09-30')]\n",
+    "results = results[(results['date'] > '2020-12-01')]\n",
     "results['mean'] = results['outcome'].apply(lambda v: pd.DataFrame(v['mean']))\n",
     "results['approach'] = results['sourcefile'].apply(lambda v: os.path.splitext(os.path.basename(v))[0].replace('unique_', '').replace('wide_and_deep', 'wd'))\n",
     "\n",
@@ -29,13 +29,23 @@
     "best_results['mae'] = best_results['neg_mean_absolute_error']\n",
     "best_results['meae'] = best_results['neg_median_absolute_error']\n",
     "best_results['rmse'] = best_results['neg_mean_squared_error'].pow(1./2)\n",
-    "best_results = best_results.sort_values(by=['approach'])\n",
+    "best_results = best_results.sort_values(by=['approach'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(best_results[['date', 'approach', 'mae', 'meae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
     "\n",
-    "display(best_results[['date', 'approach', 'mae', 'meae', 'rmse', 'hit_nonhit_accuracy']])\n",
     "\n",
     "display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
     "display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
-    "display(best_results[['approach', 'hit_nonhit_accuracy']].plot.bar(x='approach', y='hit_nonhit_accuracy', title='Wide and Deep Hit/Non-Hit Accuracy', figsize=(12, 6)))"
+    "\n",
+    "display(best_results[['approach', 'pearsonr']].plot.bar(x='approach', y='pearsonr', title='Wide and Deep Pearson Correlation', figsize=(12, 6)))\n",
+    "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Wide and Deep Spearman Correlation', figsize=(12, 6)))"
    ]
   }
  ],
