--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -38,6 +38,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from hit_prediction_code import analytics\n",
+    "\n",
+    "metric_avg = analytics.aggregate_splits_per_epoch(results['outcome'], np.average)\n",
+    "\n",
+    "display(analytics.aggregate_epochs(metric_avg, np.max).abs())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display(best_results[['date', 'approach', 'mae', 'meae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
     "\n",
     "\n",
@@ -45,7 +58,8 @@
     "display(best_results[['approach', 'rmse']].plot.bar(x='approach', y='rmse', title='Wide and Deep RMSE', figsize=(12, 6)))\n",
     "\n",
     "display(best_results[['approach', 'pearsonr']].plot.bar(x='approach', y='pearsonr', title='Wide and Deep Pearson Correlation', figsize=(12, 6)))\n",
-    "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Wide and Deep Spearman Correlation', figsize=(12, 6)))"
+    "display(best_results[['approach', 'spearmanr']].plot.bar(x='approach', y='spearmanr', title='Wide and Deep Spearman Correlation', figsize=(12, 6)))\n",
+    "display(best_results[['approach', 'kendalltau']].plot.bar(x='approach', y='kendalltau', title='Wide and Deep Kendall Correlation', figsize=(12, 6)))"
    ]
   }
  ],
