--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "convinced-gallery",
+   "id": "noble-devon",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "turned-words",
+   "id": "dress-malaysia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "short-actress",
+   "id": "endangered-assignment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,17 @@
     "\n",
     "from hit_prediction_code.analytics import foreach_epoch\n",
     "\n",
-    "i = -1\n",
+    "\n",
+    "def plot_epochs(approach, data, columns, idx):\n",
+    "    fig = pyplot.figure(figsize=(16, 14))\n",
+    "    fig.suptitle(approach)\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        plot = pyplot.subplot(2,2, i+1)\n",
+    "        sns.heatmap(data[idx[i]])\n",
+    "        plot.set_title('%s Epoches' % columns[idx[i]])\n",
+    "    \n",
+    "    pyplot.show()\n",
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
@@ -59,12 +69,19 @@
     "        cm = np.array(cm)\n",
     "        normalized_cm.append(cm / divisor)\n",
     "    \n",
-    "#     for i in range(19, int(len(normalized_cm)), 20):\n",
-    "    pyplot.subplots(figsize=(10,8))\n",
-    "    plot = sns.heatmap(normalized_cm[i])\n",
-    "    plot.set_title('%s with %s Epoches' % (result['approach'], mean_result.columns[i]))\n",
-    "    pyplot.show()\n",
-    "#     pyplot.savefig('../results/cm_norm_25_200.pdf')"
+    "    plot_epochs(result['approach'], normalized_cm, mean_result.columns, [19, 29, 39, 49])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "indian-throw",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "plot_epochs('test title')"
    ]
   }
  ],
