--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "noble-devon",
+   "id": "simple-buyer",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dress-malaysia",
+   "id": "permanent-packing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,38 +22,25 @@
     "from hit_prediction_code.analytics import add_approach_to_df\n",
     "from hit_prediction_code.analytics import add_cv_epoch_evaluator_outcome_to_df\n",
     "\n",
-    "results = get_results_as_dataframe(project_name='hit-prediction-ismir2020', table_name='hit_prediction')\n",
+    "results = get_results_as_dataframe(project_name='hit-prediction-ismir2020', table_name='hit_prediction', filter_git_dirty=False)\n",
     "results = results[results['date'] > '2021-02-02']\n",
     "\n",
     "add_approach_to_df(results)\n",
-    "add_cv_epoch_evaluator_outcome_to_df(results)"
+    "add_cv_epoch_evaluator_outcome_to_df(results)\n",
+    "\n",
+    "results.sort_values(by='approach', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endangered-assignment",
+   "id": "phantom-challenge",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from matplotlib import pyplot\n",
-    "import seaborn as sns\n",
-    "\n",
-    "from hit_prediction_code.analytics import foreach_epoch\n",
-    "\n",
-    "\n",
-    "def plot_epochs(approach, data, columns, idx):\n",
-    "    fig = pyplot.figure(figsize=(16, 14))\n",
-    "    fig.suptitle(approach)\n",
-    "    \n",
-    "    for i in range(4):\n",
-    "        plot = pyplot.subplot(2,2, i+1)\n",
-    "        sns.heatmap(data[idx[i]])\n",
-    "        plot.set_title('%s Epoches' % columns[idx[i]])\n",
-    "    \n",
-    "    pyplot.show()\n",
+    "from hit_prediction_code.analytics import plot_epochs_confution_matrix\n",
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
@@ -69,19 +56,10 @@
     "        cm = np.array(cm)\n",
     "        normalized_cm.append(cm / divisor)\n",
     "    \n",
-    "    plot_epochs(result['approach'], normalized_cm, mean_result.columns, [19, 29, 39, 49])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "indian-throw",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "plot_epochs('test title')"
+    "    plot_shape = (2, 3)\n",
+    "    \n",
+    "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
+    "        plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 14))"
    ]
   }
  ],
