--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "drawn-strength",
+   "id": "nervous-interface",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eleven-brief",
+   "id": "social-choir",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indirect-stanley",
+   "id": "arranged-compatibility",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "from hit_prediction_code.analytics import plot_epochs_confution_matrix\n",
+    "from hit_prediction_code.analytics import normalize_confusion_matrix\n",
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
@@ -53,8 +54,9 @@
     "    normalized_cm = []\n",
     "\n",
     "    for cm in cm_results:\n",
-    "        cm = np.array(cm)\n",
-    "        normalized_cm.append(cm / divisor)\n",
+    "        cm = normalize_confusion_matrix(cm, method='true')\n",
+    "        normalized_cm.append(cm)\n",
+    "        \n",
     "    \n",
     "    plot_shape = (2, 3)\n",
     "    \n",
