--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "nervous-interface",
+   "id": "facial-roommate",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "social-choir",
+   "id": "received-robertson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arranged-compatibility",
+   "id": "careful-mediterranean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,21 +45,13 @@
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
-    "    \n",
-    "    cm_results = mean_result.loc['confusion_matrix']\n",
-    "    \n",
-    "    target_counts = np.sum(cm_results[0], axis=1) + 1\n",
-    "    divisor = np.broadcast_to(target_counts + 1, (len(target_counts), (len(target_counts)))).transpose()\n",
     "\n",
     "    normalized_cm = []\n",
-    "\n",
-    "    for cm in cm_results:\n",
+    "    for cm in mean_result.loc['confusion_matrix']:\n",
     "        cm = normalize_confusion_matrix(cm, method='true')\n",
     "        normalized_cm.append(cm)\n",
     "        \n",
-    "    \n",
-    "    plot_shape = (2, 3)\n",
-    "    \n",
+    "    plot_shape = (2, 3) \n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
     "        plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 14))"
    ]
