--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "facial-roommate",
+   "id": "prompt-longitude",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,49 +11,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "received-robertson",
+   "id": "charitable-third",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os.path\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from dbispipeline.analytics import get_results_as_dataframe\n",
-    "from hit_prediction_code.analytics import add_approach_to_df\n",
-    "from hit_prediction_code.analytics import add_cv_epoch_evaluator_outcome_to_df\n",
+    "from hit_prediction_code.analytics import get_results_as_dataframe\n",
+    "from hit_prediction_code import analytics\n",
     "\n",
-    "results = get_results_as_dataframe(project_name='hit-prediction-ismir2020', table_name='hit_prediction', filter_git_dirty=False)\n",
-    "results = results[results['date'] > '2021-02-02']\n",
+    "results = get_results_as_dataframe(\n",
+    "    project_name='hit-prediction-ismir2020',\n",
+    "    table_name='hit_prediction',\n",
+    "    filter_git_dirty=True,\n",
+    "    date_filter='> \\'2021-02-05\\'',\n",
+    "    columns=['id', 'sourcefile', 'outcome'],\n",
+    ")\n",
     "\n",
-    "add_approach_to_df(results)\n",
-    "add_cv_epoch_evaluator_outcome_to_df(results)\n",
+    "analytics.add_approach_to_df(results)\n",
+    "analytics.add_cv_epoch_evaluator_outcome_to_df(results)\n",
     "\n",
-    "results.sort_values(by='approach', inplace=True)"
+    "results.sort_values(by='sourcefile', inplace=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "careful-mediterranean",
+   "id": "worldwide-twist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "from hit_prediction_code.analytics import plot_epochs_confution_matrix\n",
-    "from hit_prediction_code.analytics import normalize_confusion_matrix\n",
+    "normalize = 'true'\n",
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
     "\n",
     "    normalized_cm = []\n",
     "    for cm in mean_result.loc['confusion_matrix']:\n",
-    "        cm = normalize_confusion_matrix(cm, method='true')\n",
+    "        if normalize:\n",
+    "            cm = analytics.normalize_confusion_matrix(cm, method=normalize)\n",
+    "        else:\n",
+    "            cm = np.array(cm)\n",
     "        normalized_cm.append(cm)\n",
-    "        \n",
+    "    \n",
+    "    display(analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns))\n",
     "    plot_shape = (2, 3) \n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
-    "        plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 14))"
+    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 14))"
    ]
   }
  ],
