--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "prompt-longitude",
+   "id": "wound-chocolate",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "charitable-third",
+   "id": "hollow-heater",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-02-05\\'',\n",
+    "    date_filter='> \\'2021-02-09 16:15:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     ")\n",
     "\n",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "worldwide-twist",
+   "id": "radical-proportion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,9 +57,9 @@
     "        normalized_cm.append(cm)\n",
     "    \n",
     "    display(analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns))\n",
-    "    plot_shape = (2, 3) \n",
+    "    plot_shape = (2, 2) \n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
-    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 14))"
+    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(18, 14))"
    ]
   }
  ],
