--- a/notebooks/analyze_lastfm_labels.ipynb
+++ b/notebooks/analyze_lastfm_labels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "manufactured-trailer",
+   "id": "wireless-level",
    "metadata": {},
    "source": [
     "# Analyze last.fm Labels"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "approximate-liability",
+   "id": "junior-publication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "royal-therapy",
+   "id": "quantitative-granny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sustainable-skating",
+   "id": "federal-seafood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +72,19 @@
     "for i in range(1, 24):\n",
     "    threshold = 2 ** i\n",
     "    print(i, *threshold_info(pc_labels, threshold))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "comfortable-swimming",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('lfmlc_labels\\n', list(enumerate(common.lfmlc_labels())))\n",
+    "print('\\nlinear_lfmlc_labels\\n', list(enumerate(common.linear_lfmlc_labels())))\n",
+    "print('\\nlfmpc_labels\\n', list(enumerate(common.lfmpc_labels())))\n",
+    "print('\\nlinear_lfmpc_labels\\n', list(enumerate(common.linear_lfmpc_labels())))"
    ]
   }
  ],
