--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wound-chocolate",
+   "id": "proof-courage",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hollow-heater",
+   "id": "satellite-democrat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,10 @@
     "results = get_results_as_dataframe(\n",
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
-    "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-02-09 16:15:00\\'',\n",
+    "    filter_git_dirty=False,\n",
+    "    date_filter='> \\'2021-02-10 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleaned_ab_%%lfmlc%%\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-proportion",
+   "id": "finnish-edmonton",
    "metadata": {},
    "outputs": [],
    "source": [
