--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "moderate-picture",
+   "id": "residential-developer",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-floating",
+   "id": "several-simple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,11 @@
     "results = get_results_as_dataframe(\n",
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
-    "    filter_git_dirty=False,\n",
+    "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-02-10 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleaned_ab_%%lfmlc%%\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleaned_ab_%%\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "significant-envelope",
+   "id": "historic-institution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +59,9 @@
     "        normalized_cm.append(cm)\n",
     "    \n",
     "    display(analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns))\n",
-    "    plot_shape = (2, 2) \n",
+    "    plot_shape = (3, 3) \n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
-    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(18, 14))"
+    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 21))"
    ]
   }
  ],
