--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "residential-developer",
+   "id": "productive-enzyme",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "several-simple",
+   "id": "amber-accused",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-02-10 14:00:00\\'',\n",
+    "    date_filter='> \\'2021-03-10 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleaned_ab_%%\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "historic-institution",
+   "id": "outstanding-poster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,11 @@
     "        normalized_cm.append(cm)\n",
     "    \n",
     "    display(analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns))\n",
-    "    plot_shape = (3, 3) \n",
+    "    plot_shape = (3, 3)\n",
+    "    fig_width = 21\n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
-    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=(24, 21))"
+    "        fig_size = (fig_width, int(fig_width / plot_shape[1] * plot_shape[0] * 0.85))\n",
+    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=fig_size)"
    ]
   }
  ],
