--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "productive-enzyme",
+   "id": "wrong-material",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amber-accused",
+   "id": "hourly-indonesia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-03-10 14:00:00\\'',\n",
+    "    date_filter='> \\'2021-03-16 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleaned_ab_%%\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
@@ -41,11 +41,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "outstanding-poster",
+   "id": "smaller-comfort",
    "metadata": {},
    "outputs": [],
    "source": [
     "normalize = 'true'\n",
+    "# normalize = False\n",
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
