--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "wrong-material",
+   "id": "executive-photograph",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "hourly-indonesia",
+   "id": "honest-nature",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,9 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-03-16 14:00:00\\'',\n",
+    "    date_filter='> \\'2021-03-25 15:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleaned_ab_%%\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smaller-comfort",
+   "id": "african-needle",
    "metadata": {},
    "outputs": [],
    "source": [
