--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "executive-photograph",
+   "id": "artificial-fashion",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "honest-nature",
+   "id": "composite-publisher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,9 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-03-25 15:00:00\\'',\n",
+    "    date_filter='> \\'2021-02-08 15:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "african-needle",
+   "id": "sitting-kazakhstan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +58,12 @@
     "        else:\n",
     "            cm = np.array(cm)\n",
     "        normalized_cm.append(cm)\n",
+    "    display(result['approach'])\n",
+    "    outcome = analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns)\n",
+    "    display(outcome)\n",
+    "    display(outcome[outcome['macro_f1'] >= outcome['macro_f1'].max()])\n",
     "    \n",
-    "    display(analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns))\n",
-    "    plot_shape = (3, 3)\n",
+    "    plot_shape = (2, 3)\n",
     "    fig_width = 21\n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
     "        fig_size = (fig_width, int(fig_width / plot_shape[1] * plot_shape[0] * 0.85))\n",
