--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "artificial-fashion",
+   "id": "moved-indicator",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "composite-publisher",
+   "id": "wrong-branch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-02-08 15:00:00\\'',\n",
+    "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
@@ -35,13 +35,14 @@
     "analytics.add_approach_to_df(results)\n",
     "analytics.add_cv_epoch_evaluator_outcome_to_df(results)\n",
     "\n",
-    "results.sort_values(by='sourcefile', inplace=True)"
+    "results.sort_values(by='sourcefile', inplace=True)\n",
+    "display(len(results))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sitting-kazakhstan",
+   "id": "pediatric-backing",
    "metadata": {},
    "outputs": [],
    "source": [
