--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "moved-indicator",
+   "id": "vertical-elder",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wrong-branch",
+   "id": "mobile-representation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%weeks.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pediatric-backing",
+   "id": "massive-updating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,16 @@
     "    display(result['approach'])\n",
     "    outcome = analytics.scores_from_confusion_matrices(normalized_cm, mean_result.columns)\n",
     "    display(outcome)\n",
-    "    display(outcome[outcome['macro_f1'] >= outcome['macro_f1'].max()])\n",
+    "    best_f1 = outcome[outcome['macro_f1'] >= outcome['macro_f1'].max()]\n",
+    "    display(best_f1)\n",
     "    \n",
     "    plot_shape = (2, 3)\n",
     "    fig_width = 21\n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
     "        fig_size = (fig_width, int(fig_width / plot_shape[1] * plot_shape[0] * 0.85))\n",
-    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=fig_size)"
+    "        analytics.plot_epochs_confution_matrix(result['approach'], normalized_cm, mean_result.columns, plot_shape=plot_shape, figsize=fig_size)\n",
+    "        \n",
+    "    analytics.plot_reg(np.array(mean_result.loc['confusion_matrix'][best_f1.index[0]]))"
    ]
   }
  ],
