--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "vertical-elder",
+   "id": "strong-transmission",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "mobile-representation",
+   "id": "artistic-theorem",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%weeks.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%lfmlc.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "massive-updating",
+   "id": "antique-testimony",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +51,7 @@
     "\n",
     "for _, result in results.iterrows():\n",
     "    mean_result = result['mean']\n",
+    "    display(mean_result)\n",
     "\n",
     "    normalized_cm = []\n",
     "    for cm in mean_result.loc['confusion_matrix']:\n",
