--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -12,16 +12,36 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from dbispipeline.analytics import get_results_as_dataframe\n",
+    "from hit_prediction_code.analytics import get_results_as_dataframe\n",
+    "from hit_prediction_code import analytics\n",
     "\n",
-    "results = get_results_as_dataframe(project_name='hit-prediction-ismir2020', table_name='hit_prediction')\n",
-    "results = results[(results['date'] > '2020-12-01')]\n",
-    "results['mean'] = results['outcome'].apply(lambda v: pd.DataFrame(v['mean']))\n",
-    "results['approach'] = results['sourcefile'].apply(lambda v: os.path.splitext(os.path.basename(v))[0].replace('unique_', '').replace('wide_and_deep', 'wd'))\n",
+    "results = get_results_as_dataframe(\n",
+    "    project_name='hit-prediction-ismir2020',\n",
+    "    table_name='hit_prediction',\n",
+    "    filter_git_dirty=True,\n",
+    "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
+    "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%lfmlc.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
+    ")\n",
     "\n",
+    "analytics.add_approach_to_df(results)\n",
+    "analytics.add_cv_epoch_evaluator_outcome_to_df(results)\n",
+    "\n",
+    "results.sort_values(by='sourcefile', inplace=True)\n",
+    "display(len(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "best_results = []\n",
     "for _, row in results.iterrows():\n",
-    "    row = pd.DataFrame(pd.concat([row, row['mean'].max(axis=1).abs()], axis=0)).transpose()\n",
+    "    metrics = list(filter(lambda i: i not in ['confusion_matrix'], row['mean'].index))\n",
+    "    row = pd.DataFrame(pd.concat([row, row['mean'].loc[metrics].max(axis=1).abs()], axis=0)).transpose()\n",
     "\n",
     "    best_results.append(row)\n",
     "best_results = pd.concat(best_results)\n",
@@ -38,8 +58,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hit_prediction_code import analytics\n",
-    "\n",
     "metric_avg = analytics.aggregate_splits_per_epoch(results['outcome'], np.average)\n",
     "\n",
     "display(analytics.aggregate_epochs(metric_avg, np.max).abs())"
