--- a/notebooks/analyze_mel_spec.ipynb
+++ b/notebooks/analyze_mel_spec.ipynb
@@ -11,9 +11,10 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "data = pd.read_pickle('../data/hit_song_prediction_ismir2020/processed/analytics_tfidf_msd_bb_mbid_cleaned_matches_melspect_unique.pickle.xz')\n",
-    "data = data.sort_values(by=['label'])\n",
-    "display(data)\n",
+    "# data = pd.read_pickle('/home/mike-uibk/tmp/msd_lastfm_matches_melspect_unique.pickle.xz')\n",
+    "data = pd.read_pickle('/home/mike-uibk/tmp/msd_lastfm_matches_melspect_features.pickle.xz')\n",
+    "# data = data.sort_values(by=['label'])\n",
+    "display(data.columns)\n",
     "sns.heatmap(data[range(25)])\n",
     "plt.show()"
    ]
