--- a/notebooks/result_analytics.ipynb
+++ b/notebooks/result_analytics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "strong-transmission",
+   "id": "interim-rehabilitation",
    "metadata": {},
    "source": [
     "# Analyze Results"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "artistic-theorem",
+   "id": "knowing-kernel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
     "    filter_git_dirty=True,\n",
-    "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
+    "    date_filter='BETWEEN \\'2021-04-07 14:00:00\\' AND \\'2021-04-13 17:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
     "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%lfmlc.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "antique-testimony",
+   "id": "atomic-image",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
     "    best_f1 = outcome[outcome['macro_f1'] >= outcome['macro_f1'].max()]\n",
     "    display(best_f1)\n",
     "    \n",
-    "    plot_shape = (2, 3)\n",
+    "    plot_shape = (1, 1)\n",
     "    fig_width = 21\n",
     "    if len(normalized_cm) >= plot_shape[0] * plot_shape[1]:\n",
     "        fig_size = (fig_width, int(fig_width / plot_shape[1] * plot_shape[0] * 0.85))\n",
