--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -21,7 +21,8 @@
     "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/%%_ab_%%lfmlc.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleanStart the experiments for the fixed w&d m%%_ab_%%all%%.py\\''],\n",
+    "#     filters=['sourcefile = \\'plans/wide_and_deep_performance/lastfm_ab_unique_svr_all_lfmpc.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
     "\n",
@@ -60,7 +61,7 @@
    "source": [
     "metric_avg = analytics.aggregate_splits_per_epoch(results['outcome'], np.average)\n",
     "\n",
-    "display(analytics.aggregate_epochs(metric_avg, np.max).abs())"
+    "# display(analytics.aggregate_epochs(metric_avg, np.max).abs())"
    ]
   },
   {
@@ -69,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(best_results[['date', 'approach', 'mae', 'meae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
+    "display(best_results[['date', 'approach', 'mae', 'rmse', 'pearsonr', 'spearmanr', 'kendalltau']])\n",
     "\n",
     "\n",
     "display(best_results[['approach', 'mae']].plot.bar(x='approach', y='mae', title='Wide and Deep MAE', figsize=(12, 6)))\n",
