--- a/notebooks/results.ipynb
+++ b/notebooks/results.ipynb
@@ -21,7 +21,7 @@
     "    filter_git_dirty=True,\n",
     "    date_filter='> \\'2021-04-07 14:00:00\\'',\n",
     "    columns=['id', 'date', 'sourcefile', 'outcome'],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/cleanStart the experiments for the fixed w&d m%%_ab_%%all%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/clean%%_ab_%%all%%.py\\''],\n",
     "#     filters=['sourcefile = \\'plans/wide_and_deep_performance/lastfm_ab_unique_svr_all_lfmpc.py\\''],\n",
     "#     filters=['sourcefile LIKE \\'plans/ordinal%%\\''],\n",
     ")\n",
