--- a/notebooks/class_results.ipynb
+++ b/notebooks/class_results.ipynb
@@ -19,11 +19,11 @@
     "results = get_results_as_dataframe(\n",
     "    project_name='hit-prediction-ismir2020',\n",
     "    table_name='hit_prediction',\n",
-    "    filter_git_dirty=True,\n",
+    "    filter_git_dirty=False,\n",
     "    date_filter='> \\'2021-03-28 14:00:00\\'',\n",
     "    columns=['id', 'sourcefile', 'outcome'],\n",
-    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%.py\\''],\n",
-    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary_class_%%_ab_unique_%%_all_%%.py\\''],\n",
+    "    filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%.py\\''],\n",
+    "#     filters=['sourcefile LIKE \\'plans/wide_and_deep_performance/binary%%_ab_%%_logit_%%.py\\''],\n",
     ")\n",
     "\n",
     "analytics.add_approach_to_df(results)\n",
